# sample

./: .gitignore  CMakeLists.txt  README.md  build.bat  d  i  install.bat  m  make.bat  r  spv_gen.bat  spv_gen.sh
assets/shaders/Demo/: shading.frag  shading.vert
game/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/src/: sample.cpp
test/: CMakeLists.txt  test.cpp
